--- a/index.html
+++ b/index.html
@@ -2278,7 +2278,7 @@ const swapServerWithPair = () => {
     return React.createElement('div', {
         className: `p-1 rounded-lg shadow-md transition-all ${
             isNoSub ? 'no-sub-player' : subColorClass
-        } bg-blue-100 border-2 border-blue-500`,
+        } bg-blue-100 border-2 border-blue-500 relative`,
         'data-player-id': player.id
     },
         React.createElement('div', { className: "text-center font-bold text-sm mb-1" }, player.name),
@@ -2292,7 +2292,15 @@ const swapServerWithPair = () => {
     "/",
     React.createElement('span', { className: "text-red-600 font-medium" }, servingMiss)
 ),
-    
+        // Add swap button for players with pairs
+        player.subPair && React.createElement('button', {
+            onClick: (e) => {
+                e.stopPropagation();
+                handleManualSwap(player.id);
+            },
+            className: "absolute bottom-0 right-0 w-5 h-5 bg-blue-500 text-white rounded-tl text-xs flex items-center justify-center hover:bg-blue-600 transition-colors",
+            title: "Swap with pair"
+        }, "⇄")
     );
 };
 
