--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
             const [substitutionCount, setSubstitutionCount] = useState(0);
             const [subHistory, setSubHistory] = useState([]);
             const [rotationCount, setRotationCount] = useState(0);
+            const [autoSubsEnabled, setAutoSubsEnabled] = useState(false);
 
             const [showPlayerForm, setShowPlayerForm] = useState(false);
             const [editingPlayer, setEditingPlayer] = useState(null);
