--- a/index.html
+++ b/index.html
@@ -2332,11 +2332,39 @@ const swapServerWithPair = () => {
     const servingMiss = getPlayerGameStat(player.id, 'serving', 'miss');
 
     return React.createElement('div', {
-        className: `p-1 rounded-lg shadow-md transition-all ${
+        className: `p-3 rounded-lg shadow-md transition-all ${
             isNoSub ? 'no-sub-player' : subColorClass
         } bg-blue-100 border-2 border-blue-500 relative`,
-        'data-player-id': player.id
+        'data-player-id': player.id,
+        style: { position: 'relative' }
     },
+        React.createElement('div', { className: "text-center font-bold text-sm mb-2" }, player.name),
+        React.createElement('div', { className: "text-xs text-center mb-1" },
+            "D: ",
+            React.createElement('span', { className: "text-green-600 font-medium" }, defenseSuccess),
+            "/",
+            React.createElement('span', { className: "text-red-600 font-medium" }, defenseMiss),
+            " | S: ",
+            React.createElement('span', { className: "text-green-600 font-medium" }, servingSuccess),
+            "/",
+            React.createElement('span', { className: "text-red-600 font-medium" }, servingMiss)
+        ),
+        // Repositioned swap button to hang off bottom-right corner
+        player.subPair && React.createElement('button', {
+            onClick: (e) => {
+                e.stopPropagation();
+                handleManualSwap(player.id);
+            },
+            className: "absolute w-6 h-6 bg-blue-500 text-white rounded-full text-xs flex items-center justify-center hover:bg-blue-600 transition-colors",
+            style: { 
+                bottom: '-6px', 
+                right: '-6px',
+                zIndex: 10
+            },
+            title: "Swap with pair"
+        }, "⇄")
+    );
+};
         React.createElement('div', { className: "text-center font-bold text-sm mb-1" }, player.name),
         React.createElement('div', { className: "text-xs text-center" },
     "D: ",
@@ -2463,18 +2491,68 @@ isServer && React.createElement('button', {
 
                 return React.createElement('div', { className: `${courtBgClass} rounded-lg p-4 mb-6` },
                     React.createElement('div', { className: "text-center text-sm font-semibold mb-4 text-orange-800" },
-                        `${teamName} - Court Layout (${playMode.charAt(0).toUpperCase() + playMode.slice(1)} Mode)${gameMode ? ' - GAME MODE' : ''}`
-                    ),
+    `Court Layout (${playMode.charAt(0).toUpperCase() + playMode.slice(1)} Mode)${gameMode ? ' - GAME MODE' : ''}`
+),
                     
-                    // Game mode indicator and lock status
-                    gameMode && React.createElement('div', { className: "mb-4 p-2 bg-blue-100 rounded-lg text-center" },
-                        React.createElement('div', { className: "text-sm font-medium text-blue-800 mb-1" },
-                            currentGame ? `Game ${currentGame.id} - ${currentGame.date}` : 'No Active Game'
-                        ),
-                        isGameLocked && React.createElement('div', { className: "text-xs text-yellow-700 font-medium" },
-                            "🔒 Game Locked - Double tap to unlock"
-                        )
-                    ),
+                    // Substitution counter for game mode (substitutional play only)
+gameMode && playMode === 'substitutional' && React.createElement('div', { 
+    className: `mb-4 p-3 text-center text-sm rounded-lg border-2 ${
+        substitutionCount >= 12 ? 'bg-red-100 border-red-500 text-red-800' :
+        substitutionCount >= 10 ? 'bg-orange-100 border-orange-500 text-orange-800' :
+        'bg-cyan-100 border-cyan-500 text-cyan-800'
+    }`
+},
+    React.createElement('div', { className: "flex items-center justify-center gap-4 mb-2" },
+        React.createElement('div', { className: "font-semibold" },
+            `Substitutions: ${substitutionCount} | Rotations: ${rotationCount}`
+        ),
+        React.createElement('div', { className: "flex gap-1" },
+            React.createElement('button', {
+                onClick: () => setSubstitutionCount(Math.max(0, substitutionCount - 1)),
+                className: "w-6 h-6 bg-red-500 text-white rounded text-xs flex items-center justify-center hover:bg-red-600",
+                disabled: isGameLocked
+            }, "-"),
+            React.createElement('button', {
+                onClick: () => setSubstitutionCount(substitutionCount + 1),
+                className: "w-6 h-6 bg-green-500 text-white rounded text-xs flex items-center justify-center hover:bg-green-600",
+                disabled: isGameLocked
+            }, "+")
+        )
+    ),
+    React.createElement('div', { className: "flex items-center justify-center gap-2" },
+        React.createElement('span', { className: "text-xs" }, "Auto Subs:"),
+        React.createElement('button', {
+            onClick: () => setAutoSubsEnabled(!autoSubsEnabled),
+            className: `w-12 h-6 rounded-full transition-colors ${
+                autoSubsEnabled ? 'bg-green-500' : 'bg-gray-400'
+            }`,
+            style: { position: 'relative' },
+            disabled: isGameLocked
+        },
+            React.createElement('div', {
+                className: `w-5 h-5 bg-white rounded-full transition-transform ${
+                    autoSubsEnabled ? 'transform translate-x-6' : 'transform translate-x-0.5'
+                }`,
+                style: { position: 'absolute', top: '1px' }
+            })
+        ),
+        React.createElement('span', { className: "text-xs font-medium" },
+            autoSubsEnabled ? 'ON' : 'OFF'
+        )
+    ),
+    isGameLocked && React.createElement('div', { className: "text-xs text-yellow-700 font-medium mt-2" },
+        "🔒 Game Locked - Controls disabled"
+    )
+),
+
+// Lock status for rotational mode or simple indicator
+gameMode && playMode === 'rotational' && isGameLocked && React.createElement('div', { 
+    className: "mb-4 p-2 bg-yellow-100 rounded-lg text-center" 
+},
+    React.createElement('div', { className: "text-xs text-yellow-700 font-medium" },
+        "🔒 Game Locked - Double tap to unlock"
+    )
+),
                     
                     // Substitution Counter for substitutional mode
                     playMode === 'substitutional' && !gameMode && (
